After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759846 - incorrectly maps ffmpeg mono to GStreamer front-center
incorrectly maps ffmpeg mono to GStreamer front-center
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-libav
git master
Other Linux
: Normal blocker
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 760778 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-12-24 11:36 UTC by Chris Bass
Modified: 2016-01-18 13:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
avcodecmap: Add special mapping for mono channel layouts (1.61 KB, patch)
2015-12-24 12:10 UTC, Sebastian Dröge (slomo)
none Details | Review
avcodecmap: Add special mapping for mono channel layouts (1.61 KB, patch)
2015-12-24 12:11 UTC, Sebastian Dröge (slomo)
committed Details | Review

Description Chris Bass 2015-12-24 11:36:08 UTC
After updating to git HEADs, playback of audio causes a segfault. For example, playing an mp4 file that contains audio causes a segfault, as does running the following:

gst-launch-1.0 audiotestsrc ! avenc_mp2 ! queue ! mpegaudioparse ! avdec_mp2float ! audioconvert ! alsasink

However, the following doesn't result in a segfault:

gst-launch-1.0 audiotestsrc ! audioconvert ! alsasink

Running a git bisect identified commit 08734e7598ced4feae55529cb21609c1654a1dc0 (audio-converter: rework the main processing loop) as the one that introduced the problem.
Comment 1 Chris Bass 2015-12-24 11:37:05 UTC
Output from gdb for the gst-launch command above:

Program received signal SIGSEGV, Segmentation fault.

Comment 2 Sebastian Dröge (slomo) 2015-12-24 12:00:13 UTC
Problem is that gst_audio_get_channel_reorder_map() is called with {MONO} -> {FRONT_CENTER}.
Comment 3 Sebastian Dröge (slomo) 2015-12-24 12:08:07 UTC
commit 728075e68cca117f455faa7ed457c607134c13b9
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Thu Dec 24 13:06:13 2015 +0100

    avcodecmap: Add special mapping for mono channel layouts
    
    In ffmpeg this is the same as FRONT_CENTER, but we distinguish between
    FRONT_CENTER and MONO in GStreamer. Add an explicit mapping for this special
    case in the translations functions.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=759846
Comment 4 Sebastian Dröge (slomo) 2015-12-24 12:10:49 UTC
Created attachment 317857 [details] [review]
avcodecmap: Add special mapping for mono channel layouts

In ffmpeg this is the same as FRONT_CENTER, but we distinguish between
FRONT_CENTER and MONO in GStreamer. Add an explicit mapping for this special
case in the translations functions.
Comment 5 Sebastian Dröge (slomo) 2015-12-24 12:11:19 UTC
Comment on attachment 317857 [details] [review]
avcodecmap: Add special mapping for mono channel layouts

This also failed in 1.6 for me though.
Comment 6 Sebastian Dröge (slomo) 2015-12-24 12:11:58 UTC
Created attachment 317858 [details] [review]
avcodecmap: Add special mapping for mono channel layouts

In ffmpeg this is the same as FRONT_CENTER, but we distinguish between
FRONT_CENTER and MONO in GStreamer. Add an explicit mapping for this special
case in the translations functions.
Comment 7 Sebastian Dröge (slomo) 2015-12-24 12:13:54 UTC
Chris, can you check if this solves the problem for you too?
Comment 8 Chris Bass 2015-12-24 12:24:29 UTC
Same problem, I'm afraid.
Comment 9 Sebastian Dröge (slomo) 2015-12-24 13:05:35 UTC
Then I can't reproduce your problem :) And your backtrace doesn't contain anything meaningful, can you try to get a new one?
Comment 10 Sebastian Dröge (slomo) 2015-12-26 10:48:34 UTC
Chris, can you open a new bug with this problem once you have some more information?
Comment 11 Tim-Philipp Müller 2015-12-29 16:21:34 UTC
This might have fixed your issue:
commit 7bbfa39ada905b44743170f6c29d13e5fefb5888
Author: Stefan Sauer <ensonic@users.sf.net>
Date:   Tue Dec 29 14:23:59 2015 +0100

    audioconvert: fix passthrough operation
    
    We did not take the sample size into account. Rearrange the tests to have more
    conversion test and an extra test case for passthrough operations.
    
    Fixes #759890
Comment 12 Sebastian Dröge (slomo) 2016-01-18 13:43:05 UTC
*** Bug 760778 has been marked as a duplicate of this bug. ***